docs: streamline project documentation